<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".activities.DayDiaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tVTopDayDiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c_mo_te_encuentras_hoy"
                    android:textColor="#090909"
                    android:textSize="20dp" />

                <ImageButton
                    android:id="@+id/ImageButtonFaces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFFFF"
                    android:minHeight="48dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/caras"
                    tools:ignore="SpeakableTextPresentCheck" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="50"
                    android:progressTint="#A04CAF" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tVEstadosAdicionales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/estados_adicionales"
                    android:textColor="#050505" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UselessLeaf">

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:backgroundTint="#FFFFFFFF"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/cara_cansancio"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:backgroundTint="#FFFFFF"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/cara_aburrido"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:backgroundTint="#FFFFFF"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/cara_perezoso"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rVVariablesGuardadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:padding="5dp"
            android:textAlignment="center"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rVVariablesTotales"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/eTAnotacionesExtra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/anotaciones_extra"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/todo"
                app:backgroundTint="#9C27B0"
                app:srcCompat="@android:drawable/ic_input_add"
                tools:ignore="ContentDescription,KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGuardarDayDiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2A3ECF"
            android:text="Guardar"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>